...
                        modifier = Modifier
                            .clickable {
                                println(searcherViewModel.driver)
                                profileViewModel.selectedUser = chatsViewModel.selectedUser
                                navController.navigate(AppScreens.UserInfoScreen.route)
                            }
                            .testTag("userInfo"),
                        verticalAlignment = Alignment.CenterVertically
                    ) {
                        Box(
                            modifier = Modifier
                                .size(50.dp)
                                .background(Color(0xFF0277BD), CircleShape),
...
                        )
                    }
                },
                navigationIcon = {
                    IconButton(
                        onClick = { navController.popBackStack() },
                        modifier = Modifier.testTag("arrowBack")
                    ) {
                        Icon(imageVector = Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "Back")
                    }
                },
                colors = TopAppBarDefaults.topAppBarColors(containerColor = Color.White)
            )
...
                TextField(
                    value = messageText,
                    onValueChange = { messageText = it },
                    modifier = Modifier
                        .weight(1f)
                        .background(MaterialTheme.colorScheme.surface, shape = RoundedCornerShape(16.dp))
                        .testTag("messageInput"),
                    placeholder = { Text("Write a message...", style = MaterialTheme.typography.bodyMedium) },
                    textStyle = MaterialTheme.typography.bodyLarge,
                    singleLine = true
                )
                IconButton(
                    onClick = {
                        if (messageText.isNotBlank()) {
                            chatsViewModel.sendMessage(chatsViewModel.selectedChat!!.id, messageText)
                            messageText = ""
                        }
                    },
                    modifier = Modifier.testTag("sendMessageButton")
                ) {
                    Icon(imageVector = Icons.AutoMirrored.Filled.Send, contentDescription = "Send")
                }
            }
        }
    ) { paddingValues ->
...
                                        Log.e("LoadTrip", "Error loading trip: ${e.message}")
                                    }
                                )
                            }
                        }
                        .padding(horizontal = 16.dp, vertical = 12.dp)
                        .testTag("tripInfo")
                )
            }

            LazyColumn(
                modifier = Modifier
                    .fillMaxWidth()
...
