...
    Scaffold(topBar = {
        TopAppBar(
            title = { Text(text = "") },
            navigationIcon = {
                IconButton(
                    onClick = { navController.popBackStack() },
                    modifier = Modifier.testTag("closeTripInformation")
                ) {
                    Icon(imageVector = Icons.Filled.Close, contentDescription = "Arrow back")
                }
            }
        )
    },
...
        modifier = Modifier
            .fillMaxWidth()
            .padding(horizontal = 16.dp),
        horizontalArrangement = Arrangement.SpaceBetween
    ) {
        Text(
            text = "1 passenger, ${searcherViewModel.selectedTrip!!.dates.size} " +
                    if (searcherViewModel.selectedTrip!!.dates.size > 1) "days" else "day",
            fontSize = 20.sp
        )
        val formattedPrice = String.format("%.2f€", searcherViewModel.selectedTrip!!.price.toDouble())
        Text(
            text = buildAnnotatedString {
...
                contentDescription = "Select location",
                tint = MaterialTheme.colorScheme.primary
            )
        }
        if (searcherViewModel.passengers.isNotEmpty()) {
            Text(
                text = "Passengers:",
                fontSize = 20.sp,
                fontWeight = FontWeight.Bold,
                modifier = Modifier.padding(start = 16.dp, top = 16.dp, bottom = 8.dp)
            )

            searcherViewModel.passengers.forEach { passenger ->
...
        HorizontalDivider(
            modifier = Modifier.padding(16.dp),
            thickness = 5.dp,
            color = Color(0xFFE0E0E0)
        )
        Text(
            text = "Trip description:",
            modifier = Modifier.padding(horizontal = 16.dp),
            fontWeight = FontWeight.Bold,
            fontSize = 20.sp,
            textAlign = TextAlign.Start
        )
        Text(
...
                    colors = ButtonDefaults.buttonColors(
                        containerColor = Color.Transparent,
                        contentColor = MaterialTheme.colorScheme.onPrimary
                    ),
                    border = BorderStroke(2.dp, Color(0xFF0D47A1)),
                    shape = RoundedCornerShape(8.dp),
                    modifier = Modifier.wrapContentWidth().testTag("contactButton")
                ) {
                    Row(
                        verticalAlignment = Alignment.CenterVertically,
                        horizontalArrangement = Arrangement.Center,
                        modifier = Modifier.clickable {
                            chatsViewModel.openOrCreateChat(
...
